# life365-search

./: Makefile  README.md  docker-compose.yaml  package.json  pyproject.toml  requirements.in  requirements.txt
app/: logging.py  main.py  settings.py
app/domain/: category.py  product.py  search.py
app/infrastructure/celery/: app.py  tasks.py
app/infrastructure/life365_api/: client.py  dto.py  mappers.py
app/infrastructure/normalization/: text.py
app/infrastructure/opensearch/: bulk_indexer.py  client.py  document_builder.py  health.py  index_manager.py  mappings.py  search_repository.py
app/routers/: admin.py  errors.py  search.py  search_models.py
app/services/: exceptions.py  indexing_service.py  search_repository.py  search_service.py
docker/: fastapi.Dockerfile  worker.Dockerfile
tests/integration/: test_index_and_search.py
tests/unit/domain/: test_category.py  test_life365_mappers.py  test_product.py
tests/unit/normalization/: test_text.py
tests/unit/opensearch/: test_bulk_indexer.py  test_document_builder.py  test_search_repository.py
tests/unit/services/: test_indexing_service.py  test_search_service.py
worker/: main.py  reindex.cron
