[project]
name = "life365-search"
version = "0.1.0"
description = "Searching Life365 products"
authors = [
    {name = "Luca Bacchi",email = "bacchilu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "fastapi (>=0.128.2,<0.129.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "celery (>=5.6.2,<6.0.0)",
    "opensearch-py (>=3.1.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"
respx = "^0.22.0"
ruff = "^0.15.0"
mypy = "^1.19.1"

[tool.pytest.ini_options]
pythonpath = ["."]
